Fix text-align in footer__text

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -18,7 +18,7 @@
 
 .footer__text {
   color: var(--color-muted);
-  text-align: left;
+  text-align: center;
 }
 
 .footer__menu {
